# serin

./: .gitignore  CMakeLists.txt  README.md  cli.cpp  debug_test.cpp  pyproject.toml
cmake/: SetupPython.cmake
examples/: example_basic.cpp  example_tabular.cpp  sample1_primitives.cpp  sample2_objects.cpp  sample3_fileio.cpp  sample4_serialization.cpp
includes/: serin.h  toon.hpp
src/: serin.cpp  serin_json.cpp  serin_toon.cpp  serin_yaml.cpp  toon.cpp  utils.cpp
src/binding/: main.cpp
src/sources/: cli.cpp  serin.cpp  serin_json.cpp  serin_toon.cpp  serin_yaml.cpp  utils.cpp  utils.h
tests/cpp/: test_serin.cpp
tests/data/: sample1_user.toon  sample1_user.yaml  sample2_users.toon  sample2_users.yaml  sample3_nested.toon  sample3_nested.yaml  sample4_users.yaml
